# BookerGptTool

./: 2404.14043.md  2404.14043.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
BookerGptTool/: __init__.py  __main__.py  arxiv.py  call.py  clean_heading.py  clean_heading_models.py  clean_heading_pmt.py  clean_heading_pmt.txt  code2book+pmt.py  code2book.py  code2book_models.py  code2book_pmt.py  code2doc.py  code2doc_models.py  code2doc_pmt.py  comment.py  erchuang.py  fiction.py  fiction_pmt.py  fmt.py  fmt_chunk.py  forward.py  gpttrans.py  gts_fiction.py  gts_fiction_pmt.py  infer.py  md2skill.py  md2skill_chunker.py  md2skill_gen.py  md2skill_pmt.py  md2wiki.py  md2wiki_pmt.py  md_chunker.py  note.py  paper2code.py  paper2code_models.py  paper2code_pmt.py  pdf_ocr.py  pdf_ocr_models.py  pdf_ocr_pmt.py  (+14 more)
e86ac73df06f429b88a5c320f9ed7f9b/: 世界观.md  大纲.md  细纲1.md  细纲10.md  细纲11.md  细纲12.md  细纲13.md  细纲14.md  细纲15.md  细纲16.md  细纲17.md  细纲18.md  细纲2.md  细纲3.md  细纲4.md  细纲5.md  细纲6.md  细纲7.md  细纲8.md  细纲9.md  角色.md
